--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,157 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+  margin: 0px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  --antd-wave-shadow-color: #1890ff;
+  --scroll-bar: 0;
+  -webkit-text-size-adjust: 100%;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+  
+.home-body {
+  display: flex;
+  width: 100%;
+  height: 100vh;
+}
+
+.side-bar {
+  display: flex;
+  flex-direction: column;
+  background-color: #633ea5;
+  width: 92px;
+  color: #ae9bcf;
+}
+
+.side-bar>div {
+  width: 92px;
+  height: 64px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 200;
+  font-size: 17px;
+}
+
+.active {
+  display: flex;
+  background-color: #ffce5e;
+  color: #633ea5;
+  align-items: center;
+  justify-content: center;
+  font-weight: 200;
+  font-size: 17px;
+} 
+
+.main-content {
+  flex-grow: 1;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.main-header {
+  display: flex;
+  justify-content: space-between;
+  height: 40px;
+  align-items: center;
+}
+
+.main-header>h3 {
+  font-size: 18px;
+}
+
+.main-header>button {
+  height: 40px;
+  font-size: 17px;
+  color: white;
+  flex-shrink: 0;
+  background-color: #633ea5;
+  border: none;
+  width: 135px;
+  padding: 0px 15px;
+  cursor: pointer;
+}
+
+.main-body {
+  display: flex;
+  margin: 20px 0px 0px;
+}
+
+.cities-container {
+  flex-grow: 1;
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.cities-wrapper {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid #e5e5e5;
+    box-shadow: 0px 0px 4px rgb(0 0 0 / 25%);
+    height: calc(100vh - 50px);
+}
+
+.cities-wrapper >div::-webkit-scrollbar{
+  display: none;
+}
+
+.cities-wrapper > .header {
+  padding: 10px;
+  height: 50px;
+  font: normal bold 18px/24px Lato;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #e5e5e5;
+}
+
+.cities-wrapper > .header > div {
+  font-size: 18px;
+  width:44px;
+  height:24px;
+}
+
+.add-icon {
+  height:18px;
+  width: 18px;
+  cursor: pointer;
+}
+
+.city-details {
+  display: flex;
+  padding: 5px 10px;
+  justify-content: center;
+  flex-direction: column;
+  border: 1px solid #e5e5e5;
+  margin-top: 10px;
+  cursor: pointer;
+  font-size: 14px;
+  line-height: 1.5715;
+  color: rgba(0, 0, 0, 0.85);
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  font-feature-settings: "tnum";
+  font-variant: tabular-nums;
+}
+
+.city-details:hover{
+  background-color: #eeeeee;
+}
+.city-details:focus{
+  background-color: #eeeeee;
+}
+
+
+.cities-wrapper > div{
+  overflow-y: scroll;
+}
+
+
+
