--- a/src/index.css
+++ b/src/index.css
@@ -160,7 +160,7 @@ html {
   left: 50%;
   transform: translate(-50%, -50%) scale(0);
   transition: 200ms ease-in-out;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   border-radius: 10px;
   z-index: 10;
   background-color: white;
@@ -173,11 +173,14 @@ html {
 }
 
 .modal-header {
+  background-color: #ffce5e;
+  border-top-left-radius:10px;
+  border-top-right-radius: 10px;
   padding: 10px 15px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 1px solid black;
+  /* border-bottom: 1px solid black; */
 }
 
 .modal-header .title {
@@ -195,7 +198,19 @@ html {
 }
 
 .modal-body {
-  padding: 10px 15px;
+  overflow: scroll;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-height: 243px;
+    font-family: Lato;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 19px;
+    color: #202020;
+    padding: 0% 3%;
+    box-shadow: 0px 0px 4px rgb(0 0 0 / 25%);
 }
 
 #overlay {
@@ -215,5 +230,32 @@ html {
   pointer-events: all;
 }
 
+.modal-search {
+  display: flex;
+  justify-content: center;
+  height:40px;
+  font-size: 18px;
+}
+
+.modal-search > input {
+  width:100%;
+  border: none;
+  border: 1px solid #d9d9d9;
+}
+
+.modal-body .city-container {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 1px solid #e5e5e5;
+  margin-top: 10px;
+  padding: 2% 2%;
+}
+
+
+.modal-body::-webkit-scrollbar{
+  display: none;
+}
 
 
