--- a/src/index.css
+++ b/src/index.css
@@ -77,10 +77,41 @@ html {
   cursor: pointer;
 }
 
+.main-body-container {
+  margin-top: 20px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .main-body {
   display: flex;
   margin: 20px 0px 0px;
 }
+
+.main-body > div {
+  display: flex;
+    margin-top: 10px;
+    margin-left: 10px;
+    width: 250px;
+    height: auto;
+    border: 1px solid #e5e5e5;
+    box-shadow: 0px 0px 4px rgb(0 0 0 / 25%);
+    padding: 10px;
+    flex-direction: column;
+}
+
+.main-body .main-city-header {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.main-city-header > img {
+  width:22px;
+  height: 22px;
+  cursor: pointer;
+}
+
 
 .cities-container {
   flex-grow: 1;
@@ -258,4 +289,39 @@ html {
   display: none;
 }
 
+.cities-container .right-container {
+  width: 64%;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #e5e5e5;
+  box-shadow: 0px 0px 4px rgb(0 0 0 / 25%);
+  height: calc(100vh - 50px);
+}
 
+.cities-container .header-container {
+  display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    height: 50px;
+    border-bottom: 1px solid #e5e5e5;
+    padding: 10px;
+    font: normal bold 18px/24px Lato;
+}
+
+ .header-container > img {
+  width:22px;
+  height: 22px;
+  cursor: pointer;
+ }
+
+ .main-city-body{
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+ }
+ 
+ .main-city-body .desc-container{
+    color: green;
+    margin-bottom: 10px
+ }
